# pynotes

./: .gitignore  pyproject.toml  readme.md
pynotescli/: main.py
pynotescli/commands/: create.py  delete.py  list_notes.py
