[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pynotes"
version = "0.1.0"
description = "Simple Python CLI for notes"
authors = [{ name = "Jeremiasz", email = "you@example.com" }]
readme = "readme.md"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
pynotes = "pynotescli.main:main"
